...

class _HomePageState extends State<HomePage> {
  int _tab = 0;

  final List<({IconData icon, IconData selectedIcon, String label})>
  _destinations = const [
    (icon: Icons.info_outline, selectedIcon: Icons.info, label: 'Status'),
    (
      icon: Icons.devices_outlined,
      selectedIcon: Icons.devices_rounded,
      label: 'Printers',
    ),
    (icon: Icons.print_outlined, selectedIcon: Icons.print, label: 'Print'),
    (
      icon: Icons.receipt_long_outlined,
      selectedIcon: Icons.receipt_long,
      label: 'Raw',
    ),
    (
      icon: Icons.list_alt_outlined,
      selectedIcon: Icons.list_alt,
      label: 'Jobs',
    ),
  ];

  @override
  Widget build(BuildContext context) {
    final size = MediaQuery.of(context).size;
...
